Java 18 ea (#685)
* Update functional, unit and instrumentation tests to use Java 18 EA
* Update AITs to use Java 18 EA
* Fix workflows that 'apt' to 'apt-get' per André
* Fixing Vert.x tests
Co-authored-by: André Onuki <aonuki@newrelic.com>
Co-authored-by: Brad Ellis <bellis@newrelic.com>