@@ -96,10 +96,13 @@ test {
     forkEvery = 1
     maxParallelForks = Runtime.runtime.availableProcessors()
     //testLogging.showStandardStreams = true
-    if (project.hasProperty("test10")) {
+    if (project.hasProperty("test9") || project.hasProperty("test10")) {
         jvmArgs += ["--add-modules", "java.xml.bind"]
-    } else if (project.hasProperty("test9")) {
-        jvmArgs += ["--add-modules", "java.xml.bind"]
+    }
+
+    // when using an early access Java version, we need to pass an extra param to the agent
+    if (project.hasProperty("test18")) {
+        jvmArgs += ["-Dnewrelic.config.experimental_runtime=true"]
     }
 
     minHeapSize = "256m"
